@@ -964,9 +964,10 @@ static void Handle_event
 				Mouse::mouse->set_speed_cursor();
 				break;
 				}
-			if (!click_handled) {
-				last_b1_click = curtime;
 
+			last_b1_click = curtime;
+
+			if (!click_handled) {
 					// Identify item(s) clicked on.
 				gwin->show_items(x, y, 
 					(SDL_GetModState() & KMOD_CTRL) != 0);
