@@ -1,3 +1,6 @@
+2002-07-10  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* exult.cc: undo double click change. (it broke gumps)
+
 2002-07-10  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* gamewin.cc,paths.cc:  Removed limit on finding/dragging items on
